--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -19,7 +19,7 @@
             <div class="container-fluid">
                 <a id="titleLink" class="brand" href="/">@title</a>
                 @session.get("email").map { email =>
-                    <li ><a href="/user/@x"><i class="icon-user"></i>@email</a></li>
+                    <li ><a href="/user/@email"><i class="icon-user"></i>@email</a></li>
                     <li ><a href="/logout"><i class="icon-off"></i>logout</a></li>
                 }
             </div>
