--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -20,8 +20,8 @@
                 <a id="titleLink" class="brand" href="/">@title</a>
                 <ul class="nav">
                     @session.get("email").map { email =>
-                        <li ><a href="/user/@email"><i class="icon-user"></i>@email</a></li>
-                        <li ><a href="/logout"><i class="icon-off"></i>logout</a></li>
+                        <li class="pull-right"><a href="/user/@email"><i class="icon-user"></i>@email</a></li>
+                        <li class="pull-right"><a href="/logout"><i class="icon-off"></i>logout</a></li>
                     }
                 </ul>
             </div>
