--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -20,7 +20,7 @@
                 <a id="titleLink" class="brand" href="/">@title</a>
                 <ul class="nav pull-right">
                     @session.get("email").map { email =>
-                        <li><a href="/newticket"><i class="icon-pencil">New Ticket</i></a></li>
+                        <li><a href="/newticket"><i class="icon-pencil"></i>New Ticket</a></li>
                         <li><a href="/profile/@email"><i class="icon-user"></i>@email</a></li>
                         <li><a href="/logout"><i class="icon-off"></i>logout</a></li>
                     }
