--- a/app/views/newticket.scala.html
+++ b/app/views/newticket.scala.html
@@ -1,4 +1,12 @@
 @()(implicit session: play.api.mvc.Session)
 
-@main(""){
+@main("New Ticket"){
+    <div class="well">
+        <legend>New Ticket</legend>
+        <div id="new_ticket">
+            <label>Label name</label>
+            <input type="text" placeholder="Type something…">
+            <button class="btn btn-default">Submit</button>
+        </div>
+    </div>
 }
