--- a/app/views/newticket.scala.html
+++ b/app/views/newticket.scala.html
@@ -11,7 +11,7 @@
         <div id="new_ticket">
 
 
-            <div>
+            <div class="row-fluid">
                 <span class="span6">
                     <label>User Id</label>
                     <input id="user_id" type="text" placeholder="Enter Valid User Id" />
@@ -21,7 +21,7 @@
                 </span>
             </div>
 
-            <div>
+            <div class="row-fluid">
                 <span class="span6">
                     <label>Heading</label>
                     <input id="name" type="text" placeholder="Give a nice heading" />
@@ -32,7 +32,7 @@
             </div>
 
 
-            <div>
+            <div class="row-fluid">
                 <span class="span6">
                     <label>Desc</label>
                     <input id="desc" type="text" placeholder="Describe the problem" />
@@ -43,7 +43,7 @@
             </div>
 
 
-            <div>
+            <div class="row-fluid">
                 <span class="span6">
                     <label>AssignTo</label>
                     <input id="assignToId" type="text" placeholder="Enter Valid Id" />
