--- a/app/views/newticket.scala.html
+++ b/app/views/newticket.scala.html
@@ -10,10 +10,9 @@
 
         <div id="new_ticket">
 
-
+            <label>User Id</label>
             <div class="row-fluid">
                 <span class="span6">
-                    <label>User Id</label>
                     <input id="user_id" type="text" placeholder="Enter Valid User Id" />
                 </span>
                 <span class="span6">
@@ -21,31 +20,29 @@
                 </span>
             </div>
 
+            <label>Heading</label>
             <div class="row-fluid">
                 <span class="span6">
-                    <label>Heading</label>
-                    <input id="name" type="text" placeholder="Give a nice heading" />
+                    <input id="heading" type="text" placeholder="Give a nice heading" />
                 </span>
                 <span class="span6">
-                    <div id="name_msg"></div>
+                    <div id="heading_msg"></div>
                 </span>
             </div>
 
-
+            <label>Desc</label>
             <div class="row-fluid">
                 <span class="span6">
-                    <label>Desc</label>
-                    <input id="desc" type="text" placeholder="Describe the problem" />
+                    <textarea id="desc" type="text" placeholder="Describe the problem"></textarea>
                 </span>
                 <span class="span6">
                     <div id="desc_msg"></div>
                 </span>
             </div>
 
-
+            <label>AssignTo (Optional)</label>
             <div class="row-fluid">
                 <span class="span6">
-                    <label>AssignTo</label>
                     <input id="assignToId" type="text" placeholder="Enter Valid Id" />
                 </span>
                 <span class="span6">
