--- a/app/views/newticket.scala.html
+++ b/app/views/newticket.scala.html
@@ -6,17 +6,14 @@
 
     <div class="well">
 
-        <div id="new_ticket_msg_center"></div>
-
+        <div id="msg_center"></div>
+        <br/>
         <div id="new_ticket">
 
             <label>User Id</label>
             <div class="row-fluid">
                 <span class="span6">
                     <input id="user_id" type="text" placeholder="Enter Valid User Id" />
-                </span>
-                <span class="span6">
-                    <div id="user_id_msg"></div>
                 </span>
             </div>
 
@@ -25,9 +22,6 @@
                 <span class="span6">
                     <input id="heading" type="text" placeholder="Give a nice heading" />
                 </span>
-                <span class="span6">
-                    <div id="heading_msg"></div>
-                </span>
             </div>
 
             <label>Desc</label>
@@ -35,18 +29,12 @@
                 <span class="span6">
                     <textarea id="desc" type="text" placeholder="Describe the problem"></textarea>
                 </span>
-                <span class="span6">
-                    <div id="desc_msg"></div>
-                </span>
             </div>
 
             <label>AssignTo (Optional)</label>
             <div class="row-fluid">
                 <span class="span6">
                     <input id="assignToId" type="text" placeholder="Enter Valid Id" />
-                </span>
-                <span class="span6">
-                    <div id="assignToId_msg"></div>
                 </span>
             </div>
 
