--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,6 +9,7 @@
     <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
     <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
     <script type="text/javascript" src='@routes.Assets.at("js/ticket_submit.js")'></script>
+    <script type="text/javascript" src='@routes.Assets.at("js/edit_ticket.js")'></script>
     <style>
     body {
         margin-top: 50px;
