--- a/app/views/newticket.scala.html
+++ b/app/views/newticket.scala.html
@@ -10,10 +10,10 @@
         <br/>
         <div id="new_ticket">
 
-            <label>User Id</label>
+            <label>Customer Id</label>
             <div class="row-fluid">
                 <span class="span6">
-                    <input id="user_id" type="text" placeholder="Enter Valid User Id" />
+                    <input id="customer_id" type="text" placeholder="Enter Valid Customer Id" />
                 </span>
             </div>
 
@@ -34,11 +34,11 @@
             <label>AssignTo (Optional)</label>
             <div class="row-fluid">
                 <span class="span6">
-                    <input id="assignToId" type="text" placeholder="Enter Valid Id" />
+                    <input id="assignedToId" type="text" placeholder="Enter Valid Id" />
                 </span>
             </div>
 
-            <button id="new_ticket_submit" class="btn btn-default">Submit</button>
+            <button class="btn btn-default" onclick="ticketPost();">Submit</button>
 
         </div>
 
