--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
     <script type="text/javascript" src='@routes.Assets.at("js/ticket_submit.js")'></script>
     <script type="text/javascript" src='@routes.Assets.at("js/edit_ticket.js")'></script>
+    <script type="text/javascript" src='@routes.Assets.at("js/tickets_loader.js")'></script>
     <style>
     body {
         margin-top: 50px;
