--- a/app/views/editticket.scala.html
+++ b/app/views/editticket.scala.html
@@ -1,6 +1,6 @@
 @(ticketId: Long)(implicit session: play.api.mvc.Session)
 
-@main("Edit Ticket"){
+@main("TickSys"){
 
 <legend>Edit Ticket</legend>
 
