--- a/app/views/ticket.scala.html
+++ b/app/views/ticket.scala.html
@@ -1,5 +1,5 @@
 @()(implicit session: play.api.mvc.Session)
 
 @main("TickSys"){
-    <div class="well">Profile</div>
+    <div class="well">Ticket</div>
 }
