--- a/app/views/home.scala.html
+++ b/app/views/home.scala.html
@@ -1,6 +1,6 @@
 @()(implicit session: play.api.mvc.Session)
 
-@main("Home"){
+@main("TickSys"){
     <div id="msg_center" class="well span12"></div>
     <div class="well span12">
         <div class="row">
