--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,6 +11,8 @@
     <script type="text/javascript" src='@routes.Assets.at("js/ticket_submit.js")'></script>
     <script type="text/javascript" src='@routes.Assets.at("js/edit_ticket.js")'></script>
     <script type="text/javascript" src='@routes.Assets.at("js/tickets_loader.js")'></script>
+    <script type="text/javascript" src='@routes.Assets.at("js/comment.js")'></script>
+    <script type="text/javascript" src='@routes.Assets.at("js/comment_loader.js")'></script>
     <style>
     body {
         margin-top: 50px;
