--- a/app/views/ticket.scala.html
+++ b/app/views/ticket.scala.html
@@ -1,5 +1,43 @@
-@()(implicit session: play.api.mvc.Session)
+@(info: ((String, String, String, Int, Long, String)))(implicit session: play.api.mvc.Session)
 
 @main("TickSys"){
-    <div class="well">Ticket</div>
+    <legend>Ticket</legend>
+    <div class="well">
+        <label>Heading</label>
+        <p class="text-info">@{info._2}</p>
+        <label>Description</label>
+        <p class="text-info">@{info._3}</p>
+        <label>Author</label>
+        <p class="text-info">@{info._1}</p>
+        <label>Customer Email</label>
+        <p class="text-info">@{info._6}</p>
+        <label>Status</label>
+        <div>
+            @if(info._4 == 1) {
+            <p class="text-success">New</p>
+            }
+
+            @if(info._4 == 2) {
+            <p class="text-success">Open</p>
+            }
+
+            @if(info._4 == 3) {
+            <p class="text-error">Closed</p>
+            }
+        </div>
+        <div class="well" id="msg_center"></div>
+        <div class="row-fluid">
+            <span>
+                @if(info._4 != 3) {
+                    <label>Comment</label>
+                    <textarea id="comment_box" class="span6" rows="3" placeholder="comment here"></textarea>
+                }
+            </span>
+            <span >
+                <button class="btn" onclick='comment(@{info._5})'>comment</button>
+            </span>
+        </div>
+        <div id="comments">
+        </div>
+    </div>
 }
